--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  margin: 10px;
+  padding: 10px;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +40,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.id {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.driver-card {
+  background-color: blue;
+  color: white;
+  border-radius: 1ch;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.driver-card > img {
+  border-radius: 5ch;
 }
